<resources>
    <!-- title -->
    <string name="app_title">Onlab</string>
    <string name="login_title">Sign in</string>
    <string name="main_title">Customers</string>
    <string name="pref_title">Preferences</string>
    <string name="about_title">About</string>
    <string name="license_title">License</string>

    <!-- login -->
    <string name="login_hint_email">Email (should contain @)</string>
    <string name="login_hint_password">Password (min length = 2)</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_required_field">This field is required</string>
    <string name="login_error_failed_authentication">Authentication failed</string>
    <string name="login_button_label">Sign in (async)</string>
    <string name="login_VPN_status">VPN status : connected to company network</string>

    <!-- cancel -->
    <string name="button_cancel">Cancel async process...</string>

    <!-- query -->
    <string name="main_hint_customer">"Type customer name here (auto complete)"</string>
    <string name="main_error_no_customer">No customer with this name</string>
    <string name="main_button_query">Query (assets)</string>
    <string name="main_button_query_sql">Query (SQL)</string>
    <string name="main_button_visit">Add to recent list</string>
    <string name="main_query_label">Fiscal status</string>
    <string name="main_recent_label">Recent customers</string>

    <!-- navigation -->
    <string name="main_navigation_drawer_open">Open navigation drawer</string>
    <string name="main_navigation_drawer_close">Close navigation drawer</string>
    <string name="main_tire_customer">TYRE CUSTOMERS</string>

    <!-- menu -->
    <string name="menu_visit">To Visit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Log out</string>
    <string name="menu_license">License</string>

    <!-- DIALOGS -->
    <!-- exit -->
    <string name="exit_title">Log out</string>
    <string name="exit_confirm">Are you sure ?</string>
    <!-- visit -->
    <string name="visit_title">Delete meeting</string>
    <string name="visit_confirm">Are you sure ?</string>

    <!-- about -->
    <string name="column_who">WHO</string>
    <string name="column_author">Author</string>
    <string name="column_email">Email</string>
    <string name="column_phone">Phone</string>
    <string name="column_how">HOW</string>
    <string name="column_OS">OS</string>
    <string name="column_language">Language</string>
    <string name="column_license">License</string>
    <string name="column_what">WHAT</string>
    <string name="column_app">App</string>
    <string name="column_desc">Description</string>

    <string name="info_who">""</string>
    <string name="info_author">Berki Máté</string>
    <string name="info_email">mate.berki@hotmail.com</string>
    <string name="info_phone">+36 20 955 944 2</string>
    <string name="info_how">""</string>
    <string name="info_OS">Android</string>
    <string name="info_language">Kotlin</string>
    <string name="info_license">*(license menu)</string>
    <string name="info_what">""</string>
    <string name="info_app">Önlab 1</string>
    <string name="info_desc">"The app queries fiscal information of a customer.\nIt helps sales department to filter out wrong customers.\nSales managers must check it before accepting new orders.\nCustomer data are in a remote SQL database.\nApp requires internet and secure VPN connection.\nSQL server is on company network.\nTherefore it can be accessed by VPN only.\nApp accesses database natively."</string>

    <!-- preference_activity -->

    <string name="license">
        Copyright 2018 Mate Berki
        \n\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

</resources>
