<?xml version="1.0" encoding="utf-8"?>

<!-- ConstraintLayout - not needed -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/horizontal_padding"
            android:paddingLeft="@dimen/vertical_padding"
            android:paddingRight="@dimen/vertical_padding"
            android:paddingTop="@dimen/horizontal_padding">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="0dp"
                  android:orientation="vertical">

        <ProgressBar
                android:id="@+id/query_progress"
                android:theme="@style/ProgressIndigo"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="20"
                android:visibility="visible" />


        <TextView
                android:id="@+id/query_head"
                android:text="@string/main_query_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                android:padding="3dip"
        />

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <AutoCompleteTextView
                    android:id="@+id/query_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_hint_customer"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
            />
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/query_button"
                android:text="@string/main_button_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
        />

        <Button
                android:id="@+id/visit_button"
                android:text="@string/main_button_visit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
        />

        <TextView
                android:id="@+id/recent_customers"
                android:text="@string/main_recent_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:padding="3dip"
                android:textStyle="bold"
        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

    </LinearLayout>


</ScrollView>
